basic recommendation streamed

--- a/env.example
+++ b/env.example
@@ -7,6 +7,9 @@ TARGET_PHONE_NUMBER=target_human_phone_number
 # Deepgram Configuration
 DEEPGRAM_API_KEY=your_deepgram_api_key
 
+# OpenAI Configuration
+OPENAI_API_KEY=your_openai_api_key
+
 # Database Configuration
 MONGODB_URI=mongodb://localhost:27017/transcription
 REDIS_URL=redis://localhost:6379
