--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
     "mongoose": "^7.5.0",
+    "openai": "^5.10.2",
     "redis": "^4.6.7",
     "twilio": "^4.15.0"
   },
-  "keywords": ["twilio", "transcription", "real-time", "voice"],
+  "keywords": [
+    "twilio",
+    "transcription",
+    "real-time",
+    "voice"
+  ],
   "author": "",
   "license": "ISC"
 }
